--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicons/favicon-16x16.png">
+    <link rel="stylesheet" href="css/style.css">
     <title>Pokedex</title>
 </head>
 <body>
 
 <main>
-<img src="./imagen/pokedex.png" alt="pokedex">
+<img src="#" alt="" class="pokemon_image">
+
+<h1 class="pokemon_data">
+<span class="pokemon_number">6</span>
+<span class="pokemon_name">charizard</span>
+</h1>
+<form class="form" action="">
+    <input type="search"
+    class="input_search"
+    placeholder="Name or Number"
+    required>
+</form>
+
+<img src="./imagen/pokedex.png" alt="pokedex" class="pokedex">
 </main>
     
 </body>
