terminando estilos css basicos

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     required>
 </form>
 
+<div class="buttons">
+    <button class="button btn-pre">&lt; Prev</button>
+    <button class="button btn-next">Next &gt;</button>
+</div>
+
 <img src="./imagen/pokedex.png" alt="pokedex" class="pokedex">
 </main>
     
