--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicons/favicon-16x16.png">
     <link rel="stylesheet" href="css/style.css">
+    <script  defer src="js/script.js"></script>
     <title>Pokedex</title>
 </head>
 <body>
 
 <main>
-<img src="#" alt="" class="pokemon_image">
+<img src="#" alt="pokemon" class="pokemon_image">
 
 <h1 class="pokemon_data">
-<span class="pokemon_number">6</span>
-<span class="pokemon_name">charizard</span>
+<span class="pokemon_number"></span>
+<span class="pokemon_name"></span>
 </h1>
 <form class="form" action="">
     <input type="search"
@@ -25,7 +26,7 @@
 </form>
 
 <div class="buttons">
-    <button class="button btn-pre">&lt; Prev</button>
+    <button class="button btn-prev">&lt; Prev</button>
     <button class="button btn-next">Next &gt;</button>
 </div>
 
