correccion de button prev

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 
 <main>
+
+   
 <img src="#" alt="pokemon" class="pokemon_image">
 
 <h1 class="pokemon_data">
@@ -32,6 +34,8 @@
 
 <img src="./imagen/pokedex.png" alt="pokedex" class="pokedex">
 </main>
-    
+<!-- <audio src="/audio/pokemon.mp3" controls autoplay>
+
+</audio> -->
 </body>
 </html>
